--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  publish = "dist"
-  command = "npm run generate"
-[build.environment]
-  NODE_VERSION = "14"
+command = "npm run generate"
+publish = "dist"
+
+# [[plugins]]
+# package = "netlify-plugin-subfont"
