--- a/package.json
+++ b/package.json
@@ -1,74 +1,41 @@
 {
-  "name": "nuxtlify",
-  "version": "1.0.0",
-  "description": "Blog template for Nuxt.js/Netlify",
-  "author": "Daniel Kelly",
-  "license": "MIT",
+  "name": "ntn-boilerplate",
+  "version": "2.0.1",
+  "description": "Nuxt-Tailwind-NetlifyCMS boilerplate",
+  "author": "Sven Parker <sven@svenparker.com> (https://svenparker.com)",
   "scripts": {
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
-    "before-build": "node -r esm ./build-tools/beforeBuild.js",
-    "after-build": "node -r esm ./build-tools/afterBuild.js",
-    "dev": "npm run before-build && nuxt -o && npm run after-build",
-    "build": "npm run before-build && nuxt build && npm run after-build",
+    "dev": "nuxt",
+    "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "npm run before-build && nuxt generate && npm run after-build"
+    "generate": "nuxt generate"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/knogobert/ntn-boilerplate#readme"
+  },
+  "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/google-gtag": "^1.0.4",
-    "animate.css": "^3.7.2",
-    "axios": "^0.19.0",
-    "esm": "^3.2.25",
-    "gray-matter": "^4.0.2",
-    "highlight.js": "^10.4.1",
-    "html-loader": "^0.5.5",
-    "intersection-observer": "^0.7.0",
-    "lodash.chunk": "^4.2.0",
-    "lodash.isstring": "^4.0.1",
-    "lodash.range": "^3.2.0",
-    "markdown-it": "^8.4.2",
-    "markdown-it-deflist": "^2.0.3",
-    "markdown-it-footnote": "^3.0.1",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
-    "md5": "^2.2.1",
-    "ncp": "^2.0.0",
-    "netlify-cms": "^2.9.5",
-    "nuxt": "^2.14.11",
-    "nuxt-buefy": "^0.3.2",
-    "nuxt-fontawesome": "^0.4.0",
-    "opti-image": "^0.10.0",
-    "react": "^16.8.6",
-    "showdown": "^1.9.1",
-    "url-parse": "^1.4.7",
-    "v-runtime-template": "^1.10.0",
-    "vue-disqus": "^3.0.5"
+    "@nuxt/content": "^1.13.1",
+    "nuxt": "^2.15.0"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
-    "@nuxtjs/style-resources": "^0.1.2",
-    "@nuxtjs/eslint-config": "^6.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.22.0",
+    "@nuxtjs/color-mode": "^2.0.3",
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/svg": "^0.1.12",
+    "@nuxtjs/tailwindcss": "^3.4.2",
+    "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "gray-matter-loader": "0.0.10",
-    "node-sass": "^5.0.0",
-    "nodemon": "^1.18.9",
-    "nuxt-responsive-loader": "^2.0.1",
+    "netlify-cli": "^3.8.3",
+    "nuxt-purgecss": "^1.0.0",
+    "path": "^0.12.7",
+    "postcss-easing-gradients": "^3.0.1",
+    "postcss-import": "^12.0.1",
+    "postcss-nesting": "^7.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.16.4",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^10.1.0",
-    "sharp": "^0.26.3",
-    "vue": "2.6.12",
-    "vue-server-renderer": "2.6.12",
-    "vue-template-compiler": "2.6.12"
+    "tailwindcss": "^1.9.6",
+    "tailwindcss-dark-mode": "^1.1.7",
+    "vue-content-placeholders": "^0.2.1"
   }
 }
